# python-project-template

./: .dockerignore  .pre-commit-config.yaml  extensions.list  install_extension.sh  pyproject.toml  setup.sh
